<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".Welcome">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="9dp"
            android:contentDescription="@string/welcomeimage"
            app:layout_constraintBottom_toTopOf="@+id/welcom_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail"
            app:srcCompat="@drawable/welcomedesidn" />

        <TextView
            android:id="@+id/shoe_detail"
            android:layout_width="292dp"
            android:layout_height="69dp"
            android:text="@string/welcome_to_shoe_app"
            android:textAlignment="center"
            android:textColor="#185470"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.138" />

        <TextView
            android:id="@+id/welcom_text"
            android:layout_width="308dp"
            android:layout_height="82dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="124dp"
            android:text="@string/welcome_text"
            android:textAlignment="viewStart"
            android:textColor="#185470"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="122dp"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#185470"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.896"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcom_text"
            app:layout_constraintVertical_bias="0.844" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>